--- a/edgeadmin/docker/Dockerfile
+++ b/edgeadmin/docker/Dockerfile
@@ -35,3 +35,5 @@ RUN apt-get update \
     && apt-get clean \
     && rm -rf /var/lib/apt/lists/* \
     && python3.9 -m pip -q install --no-cache-dir -r /home/tools/requirements.txt
+
+RUN python3.9 -m pip install numpy==1.26.4 opencv-python==4.10.0.84 --no-deps
